--- a/buildspec.yml
+++ b/buildspec.yml
@@ -66,6 +66,7 @@ phases:
             
             # Check if function exists - use exit code
             echo "@@@@@@@@@@@@@@@@@@@@@@@@@  Checking if function $func_name exists..."
+            echo "@@@@@@@@@@@@@@@@@@@@@@@@@  Executing: aws lambda get-function --function-name \"$func_name\" --region \"$AWS_REGION\""
             set +e  # Don't exit on error
             aws lambda get-function --function-name "$func_name" --region "$AWS_REGION" > /dev/null 2>&1
             FUNCTION_CHECK_EXIT_CODE=$?
@@ -169,4 +170,3 @@ artifacts:
     - "imagedefinitions.json"
     - "taskdef.json"
     - "appspec.yml"
-
