--- a/buildspec.yml
+++ b/buildspec.yml
@@ -162,12 +162,48 @@ phases:
             
             echo "@@@@@@@@@@@@@@@@@@@@@@@@@  Version management completed for $func_name"
             echo "@@@@@@@@@@@@@@@@@@@@@@@@   Completed deployment for $func_name"
+            
+            # Update appspec.yml only if NEW_VERSION is greater than 1
+            if [ "$NEW_VERSION" -gt 1 ]; then
+              echo "@@@@@@@@@@@@@@@@@@@@@@@@@  NEW_VERSION ($NEW_VERSION) is greater than 1, updating appspec.yml..."
+              
+              # Read the appspec.yml file
+              APPSPEC_FILE="appspec.yml"
+              APPSPEC_OUTPUT_FILE="appspec_${func_name}.yml"
+              
+              if [ -f "$APPSPEC_FILE" ]; then
+                echo "@@@@@@@@@@@@@@@@@@@@@@@@@  Found appspec.yml, creating $APPSPEC_OUTPUT_FILE for $func_name..."
+                
+                # Copy appspec.yml to function-specific file
+                cp "$APPSPEC_FILE" "$APPSPEC_OUTPUT_FILE"
+                
+                # Calculate the previous version (CURRENT_VERSION)
+                CURRENT_VERSION=$((PUBLISHED_VERSION - 1))
+                
+                echo "@@@@@@@@@@@@@@@@@@@@@@@@@  Function: $func_name"
+                echo "@@@@@@@@@@@@@@@@@@@@@@@@@  Current Version: $CURRENT_VERSION"
+                echo "@@@@@@@@@@@@@@@@@@@@@@@@@  Published Version (Target): $PUBLISHED_VERSION"
+                
+                # Update the function-specific appspec file with actual values
+                sed -i "s/<LAMBDA_FUNCTION_NAME>/$func_name/g" "$APPSPEC_OUTPUT_FILE"
+                sed -i "s/<CURRENT_VERSION>/$CURRENT_VERSION/g" "$APPSPEC_OUTPUT_FILE"
+                sed -i "s/<PUBLISHED_VERSION>/$PUBLISHED_VERSION/g" "$APPSPEC_OUTPUT_FILE"
+                
+                echo "@@@@@@@@@@@@@@@@@@@@@@@@@  Updated $APPSPEC_OUTPUT_FILE successfully"
+                echo "@@@@@@@@@@@@@@@@@@@@@@@@@  Contents of $APPSPEC_OUTPUT_FILE:"
+                cat "$APPSPEC_OUTPUT_FILE"
+              else
+                echo "@@@@@@@@@@@@@@@@@@@@@@@@@  WARNING: appspec.yml not found in current directory"
+              fi
+            else
+              echo "@@@@@@@@@@@@@@@@@@@@@@@@@  NEW_VERSION ($NEW_VERSION) is 1, skipping appspec.yml update for initial deployment"
+            fi
+            
             echo "----------------------------------------"
           fi
         done
       - echo "@@@@@@@@@@@@@@@@@@@@@@@@@@ Lambda function deployment completed .................."
 artifacts:
   files:
-    - "imagedefinitions.json"
-    - "taskdef.json"
-    - "appspec.yml"
+    - "appspec_fetch_order.yml"
+    - "appspec_save_order.yml"
