Modified the code build pieline to produce the same build artifacts and setting a variable for conditional execution of code pipeline.

--- a/appspec.yml
+++ b/appspec.yml
@@ -1,6 +1,6 @@
 version: 0.2
 Resources:
-  - FetchOrderFunction:
+  - OrderServiceFunction:
       Type: AWS::Lambda::Function
       Properties:
         Name: "<LAMBDA_FUNCTION_NAME>"
