--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,6 +26,9 @@ phases:
       - echo "Starting Lambda function deployment .................."
       - mkdir -p lambda-deployment
       - |
+        # Copy the template appspec.yml to a working copy
+        cp appspec.yml appspec_working.yml
+        
         for func_dir in functions/*/; do
           if [ -d "$func_dir" ]; then
             # Extract function name from directory path
@@ -163,73 +166,44 @@ phases:
             echo "@@@@@@@@@@@@@@@@@@@@@@@@  Version management completed for $func_name"
             echo "@@@@@@@@@@@@@@@@@@@@@@@   Completed deployment for $func_name"
             
-            # Update appspec.yml only if NEW_VERSION is greater than 1
+            # Update appspec.yml with version info for this specific function
             if [ "$NEW_VERSION" -gt 1 ]; then
-              echo "@@@@@@@@@@@@@@@@@@@@@@@@  NEW_VERSION ($NEW_VERSION) is greater than 1, updating appspec.yml..."
-              
-              # Read the appspec.yml file
-              APPSPEC_FILE="appspec.yml"
-              APPSPEC_OUTPUT_FILE="appspec_${func_name}.yml"
-              
-              if [ -f "$APPSPEC_FILE" ]; then
-                echo "@@@@@@@@@@@@@@@@@@@@@@@@  Found appspec.yml, creating $APPSPEC_OUTPUT_FILE for $func_name..."
-                
-                # Copy appspec.yml to function-specific file
-                cp "$APPSPEC_FILE" "$APPSPEC_OUTPUT_FILE"
-                
-                # Calculate the previous version (CURRENT_VERSION)
-                CURRENT_VERSION=$((PUBLISHED_VERSION - 1))
-                
-                echo "@@@@@@@@@@@@@@@@@@@@@@@@  Function: $func_name"
-                echo "@@@@@@@@@@@@@@@@@@@@@@@@  Current Version: $CURRENT_VERSION"
-                echo "@@@@@@@@@@@@@@@@@@@@@@@@  Published Version (Target): $PUBLISHED_VERSION"
-                
-                # Update the function-specific appspec file with actual values
-                sed -i "s/<LAMBDA_FUNCTION_NAME>/$func_name/g" "$APPSPEC_OUTPUT_FILE"
-                sed -i "s/<CURRENT_VERSION>/$CURRENT_VERSION/g" "$APPSPEC_OUTPUT_FILE"
-                sed -i "s/<PUBLISHED_VERSION>/$PUBLISHED_VERSION/g" "$APPSPEC_OUTPUT_FILE"
-                
-                echo "@@@@@@@@@@@@@@@@@@@@@@@@  Updated $APPSPEC_OUTPUT_FILE successfully"
-                echo "@@@@@@@@@@@@@@@@@@@@@@@@  Contents of $APPSPEC_OUTPUT_FILE:"
-                cat "$APPSPEC_OUTPUT_FILE"
-              else
-                echo "@@@@@@@@@@@@@@@@@@@@@@@@  WARNING: appspec.yml not found in current directory"
-              fi
+              CURRENT_VERSION=$((PUBLISHED_VERSION - 1))
+              echo "@@@@@@@@@@@@@@@@@@@@@@@@  Function: $func_name - Current Version: $CURRENT_VERSION, Published Version: $PUBLISHED_VERSION"
             else
-              echo "@@@@@@@@@@@@@@@@@@@@@@@@  NEW_VERSION ($NEW_VERSION) is 1, creating initial appspec file for $func_name..."
-              
-              # Read the appspec.yml file
-              APPSPEC_FILE="appspec.yml"
-              APPSPEC_OUTPUT_FILE="appspec_${func_name}.yml"
               CURRENT_VERSION=$PUBLISHED_VERSION
-              if [ -f "$APPSPEC_FILE" ]; then
-                echo "@@@@@@@@@@@@@@@@@@@@@@@@  Found appspec.yml, creating initial $APPSPEC_OUTPUT_FILE for $func_name..."
-                
-                # Copy appspec.yml to function-specific file
-                cp "$APPSPEC_FILE" "$APPSPEC_OUTPUT_FILE"
-                
-                echo "@@@@@@@@@@@@@@@@@@@@@@@@  Function: $func_name"
-                echo "@@@@@@@@@@@@@@@@@@@@@@@@  Initial deployment - keeping placeholders in $APPSPEC_OUTPUT_FILE"
-                
-                # For initial deployment, just replace the function name, keep version placeholders
-                sed -i "s/<LAMBDA_FUNCTION_NAME>/$func_name/g" "$APPSPEC_OUTPUT_FILE"
-                sed -i "s/<CURRENT_VERSION>/$CURRENT_VERSION/g" "$APPSPEC_OUTPUT_FILE"
-                sed -i "s/<PUBLISHED_VERSION>/$CURRENT_VERSION/g" "$APPSPEC_OUTPUT_FILE"
-                
-                echo "@@@@@@@@@@@@@@@@@@@@@@@@  Created $APPSPEC_OUTPUT_FILE for initial deployment"
-                echo "@@@@@@@@@@@@@@@@@@@@@@@@  Contents of $APPSPEC_OUTPUT_FILE:"
-                cat "$APPSPEC_OUTPUT_FILE"
-              else
-                echo "@@@@@@@@@@@@@@@@@@@@@@@@  WARNING: appspec.yml not found in current directory"
-              fi
+              echo "@@@@@@@@@@@@@@@@@@@@@@@@  Function: $func_name - Initial deployment - Current Version: $CURRENT_VERSION, Published Version: $PUBLISHED_VERSION"
             fi
+            
+            # Use awk to find and replace versions for the specific function in appspec_working.yml
+            echo "@@@@@@@@@@@@@@@@@@@@@@@@  Updating appspec_working.yml for function $func_name..."
+            awk -v func="$func_name" -v current="$CURRENT_VERSION" -v target="$PUBLISHED_VERSION" '
+            BEGIN { in_function = 0 }
+            /^  - / { 
+              if ($2 == func ":") {
+                in_function = 1
+              } else {
+                in_function = 0
+              }
+            }
+            {
+              if (in_function && /CurrentVersion:/) {
+                sub(/<CURRENT_VERSION>/, current)
+              }
+              if (in_function && /TargetVersion:/) {
+                sub(/<PUBLISHED_VERSION>/, target)
+              }
+              print
+            }' appspec_working.yml > appspec_temp.yml && mv appspec_temp.yml appspec_working.yml
             
             echo "----------------------------------------"
           fi
         done
       - echo "@@@@@@@@@@@@@@@@@@@@@@@@ Lambda function deployment completed .................."
+      - echo "@@@@@@@@@@@@@@@@@@@@@@@@ Final appspec.yml contents:"
+      - mv appspec_working.yml appspec.yml
+      - cat appspec.yml
 
 artifacts:
   files:
-    - "appspec_fetch_order.yml"
-    - "appspec_save_order.yml"
+    - "appspec.yml"
